rnsc/test_data/integration/error/parser/super_directive/missing_operand_recovers.rns
.class MyClass
.super ; <- first error
unknown tokens ; <- should be reported as well